linux-5.14.0-162.6.1.el9.x86_64/samples/bpf/bpftool/feature/test-all.make.output
In file included from test-all.c:14:
test-libpython.c:2:10: fatal error: Python.h: No such file or directory
    2 | #include <Python.h>
      |          ^~~~~~~~~~
compilation terminated.
